Add /charities/byBN
